fixed switch-bar overlapping character

--- a/pages/game/style.module.scss
+++ b/pages/game/style.module.scss
@@ -54,3 +54,7 @@
   text-align: center;
   margin-top: 2em;
 }
+
+.switch{
+  margin-top: 3rem;
+}
